Dancing Guy z-index fix.

--- a/css/site.css
+++ b/css/site.css
@@ -68,6 +68,7 @@ div #scrollingScrollingScrollingKeepThoseWagonsScrolling {
   position: fixed;
   bottom: 0;
   right: 0;
+  z-index: 10;
 }
 
 .blink {
